--- a/public/index.html
+++ b/public/index.html
@@ -45,53 +45,7 @@
         </form>
       </section>
 
-      <section id="posted-tweet">
-
-        <article class="tweets">
-
-          <header class="tweet-header">
-            <img class="userlogo" src="/images/bird.png" height="50px" width="50px">
-            <span class="user">Yang</span>
-            <span class="userid">@Yang</span>
-          </header>
-
-          <div class="tweet-content-box">
-            <span class="tweet-content">yiuysiudyiuaysudyaiusydiuaysdiuyasiuydiasydiausydiaysid</span>
-          </div>
-
-          <footer class="tweet-footer">
-            <span>date:2018</span>
-            <img class="flag" src="/images/bird.png" height="15px" width="15px">
-            <img class="retweet" src="/images/bird.png" height="15px" width="15px">
-            <img class="like" src="/images/bird.png" height="15px" width="15px">
-          </footer>
-
-        </article>
-
-      </section>
-
-      <section id="posted-tweet">
-
-        <article class="tweets">
-
-          <header class="tweet-header">
-            <img class="userlogo" src="/images/bird.png" height="50px" width="50px">
-            <span class="user">Yang</span>
-            <span class="userid">@Yang</span>
-          </header>
-
-          <div class="tweet-content-box">
-            <span class="tweet-content">yiuysiudyiuaysudyaiusydiuaysdiuyasiuydiasydiausydiaysid</span>
-          </div>
-
-          <footer class="tweet-footer">
-            <span>date:2018</span>
-            <img class="flag" src="/images/bird.png" height="15px" width="15px">
-            <img class="retweet" src="/images/bird.png" height="15px" width="15px">
-            <img class="like" src="/images/bird.png" height="15px" width="15px">
-          </footer>
-
-        </article>
+      <section id="posted-tweet-container">
 
       </section>
 
