--- a/public/index.html
+++ b/public/index.html
@@ -32,17 +32,29 @@
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
-      <span class="header">Tweeter!!!</span>
+      <span class="header">Tweeter</span>
+      <button class = "composeButton" type="button">Compose</button>
     </nav>
     <!-- Page-specific (main) content here -->
     <main class="container">
+
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets">
           <textarea class="tweetarea" name="text" placeholder="What are you humming about?"></textarea>
+          <div class="error">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+            <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
+          </div>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
+        <!--
+        <div class="error">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+            <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
+        </div>
+      -->
       </section>
 
       <section id="posted-tweet-container">
