changed CSS color

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
             <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
           </div>
-          <input type="submit" value="Tweet">
+          <input class="submit" type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
 
